overflow fix

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -346,19 +346,19 @@ body
       .arrow
         top: 320px;
         &.prev
-          left: 10px
+          left: 20px
         &.next
-          margin-right: 10px
+          margin-right: 20px
       h1
         font-size: 60px
         line-height: 55px
       h2
         margin: 10px 0 5px
       .screenshots
-        margin-right: 65px
+        margin-right: 85px
       .copy
         header,section
-          margin-left: 65px
+          margin-left: 85px
         p
           font-size: 12px
           line-height: 14px
